--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -55,29 +55,29 @@
 
 .content {
     position: absolute;
-    top: 0;
+    top: 0; /* Will be adjusted dynamically by adjustContentTop */
     bottom: var(--footer-height);
     width: 100%;
     padding: 20px;
     overflow-y: auto;
-    background-color: var(--light-bg); /* <-- Add this */
+    background-color: var(--light-bg);
     background-image: url('data:image/svg+xml,%3Csvg width="40" height="40" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg"%3E%3Ccircle cx="20" cy="20" r="2" fill="%23FFC107" fill-opacity="0.1"/%3E%3C/svg%3E');
     background-repeat: repeat;
-    bottom: var(--footer-height);
 }
 
-        .profile-card {
-            background: var(--card-bg); /* dark card background like task items */
-            border: 2px solid var(--border-dark); /* dark border like tasks */
-            border-radius: 12px;
-            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            text-align: center;
-            width: 100%;
-            max-width: 480px;
-            margin: 0 auto;
-            transition: transform 0.3s ease;
-        }
+.profile-card {
+    background: var(--card-bg);
+    border: 2px solid var(--border-dark);
+    border-radius: 12px;
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    text-align: center;
+    width: 100%;
+    max-width: 480px;
+    margin: 0 auto;
+    transition: transform 0.3s ease;
+    min-height: calc(100vh - var(--header-height) - var(--footer-height) - 40px); /* Ensure it can grow */
+}
         .profile-card:hover {
             transform: translateY(-10px);
         }
@@ -996,154 +996,77 @@ document.addEventListener("DOMContentLoaded", () => {
 
 
 
-        async function loadUserTasks(userName, selectedDate = new Date().toLocaleDateString("sv-SE")) {
-    let tasks = JSON.parse(localStorage.getItem("familyApp_tasks")) || [];
-    const userTasksDiv = document.getElementById("userTasks");
+async function loadMarketRewards(userName) {
+    const marketRewardsDiv = document.getElementById("marketRewards");
+    const adminEmail = localStorage.getItem("currentAdminEmail")?.trim();
 
-    // Fetch tasks from the server if implemented
+    if (!adminEmail) {
+        marketRewardsDiv.innerHTML = "<p>Error: No admin email provided.</p>";
+        return;
+    }
+
+    console.log("Admin email used for fetch:", adminEmail); // Debug: Log the admin email
+
     try {
-        const adminEmail = localStorage.getItem("currentAdminEmail");
-        const res = await fetch(`https://beemazing.onrender.com/get-tasks?adminEmail=${encodeURIComponent(adminEmail)}`);
-        const data = await res.json();
-        if (data.success) {
-            tasks = data.tasks || tasks;
-            localStorage.setItem("familyApp_tasks", JSON.stringify(tasks));
-        }
-    } catch (err) {
-        console.error("Failed to fetch tasks from server:", err);
-    }
+        // Fetch market rewards from MongoDB
+        const response = await fetch(`https://beemazing.onrender.com/api/market-rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
+        const data = await response.json();
 
-    // Parse dates for comparison
-    function parseLocalDate(dateStr) {
-        const [year, month, day] = dateStr.split("-").map(Number);
-        return new Date(year, month - 1, day);
-    }
-
-    // Filter tasks for the user on the selected date
-    const userTasks = tasks.filter(task => {
-        // Ensure the user is assigned to the task
-        if (!task.users?.includes(userName)) return false;
-
-        // Check if the task is active on the selected date
-        const dateRange = task.date.split(" to ");
-        const startDateStr = dateRange[0];
-        const startDate = parseLocalDate(startDateStr);
-        const endDateStr = dateRange[1] || "3000-01-01";
-        const endDate = parseLocalDate(endDateStr);
-        const currentDate = parseLocalDate(selectedDate);
-
-        if (currentDate < startDate || currentDate > endDate) return false;
-
-        // For "Daily" tasks with timesPerDay > 1, always show the task
-        if (task.repeat === "Daily" && task.timesPerDay > 1) {
-            return true;
+        if (!response.ok) {
+            throw new Error(data.error || "Failed to fetch market rewards");
         }
 
-        // For "Daily" tasks with timesPerDay === 1, only show if it's the user's turn
-        if (task.repeat === "Daily" && task.timesPerDay === 1) {
-            const diffDays = Math.floor((currentDate - startDate) / (1000 * 60 * 60 * 24));
-            const userOrder = [...task.users];
-            const currentIndex = diffDays % userOrder.length;
-            const currentTurn = userOrder[currentIndex];
-            return currentTurn === userName;
+        const rewards = data.rewards || [];
+        console.log("Fetched market rewards:", rewards); // Debug: Log the fetched rewards
+        console.log("Number of rewards:", rewards.length); // Debug: Log the count
+
+        marketRewardsDiv.innerHTML = "";
+
+        if (rewards.length === 0) {
+            marketRewardsDiv.innerHTML = "<p>No rewards available in the market.</p>";
+            return;
         }
 
-        // For other task types (Weekly, Monthly, or Daily with temp turn), check the turn
-        const currentTurn = task.tempTurnReplacement?.replacement || task.turn || task.users[0];
-        return currentTurn === userName;
-    });
+        // Fetch user's current honey balance
+        const userRewardsResponse = await fetch(`https://beemazing.onrender.com/api/rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
+        const userRewardsData = await userRewardsResponse.json();
+        const userHoney = (userRewardsData.rewards && userRewardsData.rewards[userName]) || 0;
+        console.log("User honey balance:", userHoney); // Debug: Log the user's honey
 
-    // Display the filtered tasks
-    if (userTasks.length === 0) {
-        userTasksDiv.innerHTML = "<p>No tasks assigned to this bee.</p>";
-    } else {
-        userTasksDiv.innerHTML = "";
-        const today = new Date().toLocaleDateString("sv-SE");
-        const isToday = selectedDate === today;
-
-        userTasks.forEach(task => {
-            const taskDiv = document.createElement("div");
-            taskDiv.className = "task-item";
-
-            // Calculate the current turn for display
-            const dateRange = task.date.split(" to ");
-            const startDateStr = dateRange[0];
-            const startDate = parseLocalDate(startDateStr);
-            const currentDate = parseLocalDate(selectedDate);
-            let currentTurn;
-
-            // Determine required times for the task
-            let requiredTimes = 1;
-            if (task.repeat === "Daily") requiredTimes = task.timesPerDay || 1;
-            if (task.repeat === "Weekly") requiredTimes = task.timesPerWeek || 1;
-            if (task.repeat === "Monthly") requiredTimes = task.timesPerMonth || 1;
-
-            // Get completions for the selected date
-            let completedRaw = task.completions?.[selectedDate] || [];
-            let completedUsers = Array.isArray(completedRaw) ? completedRaw : [];
-            let completedTimes = completedUsers.length;
-
-            // For "Daily" tasks with timesPerDay > 1, calculate the current turn based on completions
-            if (task.repeat === "Daily" && task.timesPerDay > 1) {
-                const userOrder = [...task.users];
-                const totalRequiredCompletions = task.timesPerDay;
-                const completionIndex = completedTimes % userOrder.length;
-                currentTurn = userOrder[completionIndex];
-            } else if (task.repeat === "Daily" && task.timesPerDay === 1) {
-                const diffDays = Math.floor((currentDate - startDate) / (1000 * 60 * 60 * 24));
-                const userOrder = [...task.users];
-                const currentIndex = diffDays % userOrder.length;
-                currentTurn = userOrder[currentIndex];
-            } else {
-                currentTurn = task.tempTurnReplacement?.replacement || task.turn || task.users[0];
+        rewards.forEach((reward, index) => {
+            if (!reward.name || !reward.diamonds) {
+                console.warn(`Skipping invalid reward at index ${index}:`, reward);
+                return;
             }
-
-            // Display progress
-            let progressText = completedTimes >= requiredTimes
-                ? `<span style="color: green; font-weight: bold;">Completed</span>`
-                : `${completedTimes}/${requiredTimes}`;
-
-            // Show the "Turn" field for all tasks, unless the task is fully completed
-            const showTurn = completedTimes < requiredTimes;
-            const turnText = showTurn ? `Turn: ${currentTurn}<br>` : '';
-
-            // Build the task item HTML
-            taskDiv.innerHTML = `
-                <strong>${task.title}</strong><br>
-                ${turnText}
-                Honey: ${task.reward || "0"} 🍯<br>
-                Progress: ${progressText}
+            console.log(`Processing reward ${index}:`, reward); // Debug: Log each reward being processed
+            const rewardItem = document.createElement("div");
+            rewardItem.className = "market-item";
+            rewardItem.innerHTML = `
+                <div>
+                    <strong>${reward.name}</strong><br>
+                    Honey: ${reward.diamonds} 🍯
+                </div>
             `;
 
-            // Determine if the user can finish the task
-            const canFinish = isToday && currentTurn === userName && completedTimes < requiredTimes;
+            const buyButton = document.createElement("button");
+            buyButton.className = "buy-btn";
+            buyButton.textContent = "Buy";
+            buyButton.disabled = userHoney < reward.diamonds;
+            buyButton.addEventListener("click", async () => {
+                await buyReward(userName, reward, index);
+                await loadMarketRewards(userName);
+                await loadUserReward(userName);
+            });
 
-            if (canFinish) {
-                const finishedButton = document.createElement("button");
-                finishedButton.textContent = "Finish Task";
-                finishedButton.className = "finished-btn";
-                finishedButton.onclick = (e) => {
-                    e.stopPropagation();
-                    finishTask(userName, task, selectedDate);
-                };
-                taskDiv.appendChild(finishedButton);
-            } else if (completedTimes < requiredTimes && completedUsers.includes(userName) && currentTurn !== userName) {
-                // Show "Completed" for the user if they have completed their turn, the task isn't fully completed, and it's not their turn
-                const completedText = document.createElement("div");
-                completedText.style.color = "green";
-                completedText.style.fontWeight = "bold";
-                completedText.style.marginTop = "10px";
-                completedText.textContent = "Completed";
-                taskDiv.appendChild(completedText);
-            }
-
-            taskDiv.addEventListener("click", () => showTaskDetails(task));
-            userTasksDiv.appendChild(taskDiv);
+            rewardItem.appendChild(buyButton);
+            marketRewardsDiv.appendChild(rewardItem);
+            console.log(`Added reward ${index} to DOM:`, rewardItem.outerHTML); // Debug: Log the HTML
         });
+    } catch (err) {
+        console.error("Error loading market rewards:", err);
+        marketRewardsDiv.innerHTML = "<p>Failed to load market rewards. Please try again later.</p>";
     }
 }
-
-
 
 
 
@@ -1910,13 +1833,14 @@ async function buyReward(userName, reward, index) {
         }
     
         function adjustContentTop() {
-            const header = document.querySelector(".date-header");
-            const content = document.querySelector(".content");
-            if (header && content) {
-                const headerHeight = header.getBoundingClientRect().height;
-                content.style.top = `${headerHeight}px`;
-            }
-        }
+    const header = document.querySelector(".date-header");
+    const content = document.querySelector(".content");
+    if (header && content) {
+        const headerHeight = header.getBoundingClientRect().height;
+        console.log("Adjusting content top to:", headerHeight); // Debug: Log the header height
+        content.style.top = `${headerHeight}px`;
+    }
+}
     
         function showAdminControlsIfNeeded() {
             const urlParams = new URLSearchParams(window.location.search);
