--- a/mobile/2-UserProfiles/usermarket.html
+++ b/mobile/2-UserProfiles/usermarket.html
@@ -274,7 +274,7 @@
     </div>
 
     <div class="footer">
-        <a href="#" id="homeButton" class="footer-icon" aria-label="Home">
+        <a href="/BeeMazing-Y1/mobile/1-Home/home.html" class="footer-icon" aria-label="Home">
             <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
             <span>Home</span>
         </a>
@@ -291,7 +291,10 @@
             <span>Rewards</span>
         </a>
     </div>
+    
+    
 
+    <!-- Reward Claim Overlay -->
     <div class="reward-overlay" id="rewardOverlay">
         <div class="reward-message">
             <h3>Reward Claimed!</h3>
@@ -300,59 +303,44 @@
     </div>
 
     <script>
-    const urlParams = new URLSearchParams(window.location.search);
-    // Use fallbacks if parameters are missing
-    let userName = urlParams.get('user') || "User1"; // Default for testing
-    let adminEmail = urlParams.get('adminEmail') || "test@example.com"; // Default for testing
+        const urlParams = new URLSearchParams(window.location.search);
+        const userName = urlParams.get('user');
 
-    // If parameters were missing, redirect to correct URL immediately
-    if (!urlParams.get('user') || !urlParams.get('adminEmail')) {
-        window.location.href = `/BeeMazing-Y1/mobile/2-UserProfiles/usermarket.html?user=${encodeURIComponent(userName)}&adminEmail=${encodeURIComponent(adminEmail)}`;
+        if (userName) {
+    document.getElementById('userName').textContent = userName;
+
+    document.getElementById('profileButton').href = `/BeeMazing-Y1/mobile/2-UserProfiles/users.html?user=${userName}`;
+    document.getElementById('marketButton').href = `/BeeMazing-Y1/mobile/2-UserProfiles/usermarket.html?user=${userName}`;
+    document.getElementById('rewardsButton').href = `/BeeMazing-Y1/mobile/2-UserProfiles/userrewards.html?user=${userName}`;
+
+    loadRewards(userName);
+}
+
+
+
+
+document.querySelectorAll('.footer a').forEach(link => {
+    const currentPath = window.location.pathname.replace(/\/$/, '');
+    const linkPath = new URL(link.href).pathname.replace(/\/$/, '');
+
+    if (currentPath === linkPath) {
+        link.classList.add('active');
     } else {
-        document.getElementById('userName').textContent = userName;
-
-        // Set footer links
-        document.getElementById('homeButton').href = `/BeeMazing-Y1/mobile/1-Home/home.html?adminEmail=${encodeURIComponent(adminEmail)}`;
-        document.getElementById('profileButton').href = `/BeeMazing-Y1/mobile/2-UserProfiles/users.html?user=${encodeURIComponent(userName)}&adminEmail=${encodeURIComponent(adminEmail)}`;
-        document.getElementById('marketButton').href = `/BeeMazing-Y1/mobile/2-UserProfiles/usermarket.html?user=${encodeURIComponent(userName)}&adminEmail=${encodeURIComponent(adminEmail)}`;
-        document.getElementById('rewardsButton').href = `/BeeMazing-Y1/mobile/2-UserProfiles/userrewards.html?user=${encodeURIComponent(userName)}&adminEmail=${encodeURIComponent(adminEmail)}`;
-
-        // Highlight active link
-        document.querySelectorAll('.footer a').forEach(link => {
-            const currentPath = window.location.pathname.replace(/\/$/, '');
-            const linkPath = new URL(link.href).pathname.replace(/\/$/, '');
-            if (currentPath === linkPath) {
-                link.classList.add('active');
-            } else {
-                link.classList.remove('active');
-            }
-        });
-
-        loadRewards(userName);
+        link.classList.remove('active');
     }
+});
 
-    async function getUserDiamonds(userName) {
-        try {
-            const response = await fetch(`https://beemazing.onrender.com/api/rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
-            const data = await response.json();
-            if (!response.ok) throw new Error(data.error || "Failed to fetch rewards");
-            const rewards = data.rewards || {};
+
+
+        function getUserDiamonds(userName) {
+            const rewards = JSON.parse(localStorage.getItem("familyApp_rewards")) || {};
             return rewards[userName] || 0;
-        } catch (err) {
-            console.error("Error fetching user diamonds:", err);
-            return 0;
         }
-    }
 
-    async function loadRewards(userName) {
-        const rewardList = document.getElementById("rewardList");
-        try {
-            const marketResponse = await fetch(`https://beemazing.onrender.com/api/market-rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
-            const marketData = await marketResponse.json();
-            if (!marketResponse.ok) throw new Error(marketData.error || "Failed to fetch market rewards");
-            const rewards = marketData.rewards || [];
-
-            const userDiamonds = await getUserDiamonds(userName);
+        function loadRewards(userName) {
+            const rewards = JSON.parse(localStorage.getItem("familyApp_rewards_market")) || [];
+            const rewardList = document.getElementById("rewardList");
+            const userDiamonds = getUserDiamonds(userName);
 
             rewardList.innerHTML = "";
             if (rewards.length === 0) {
@@ -376,87 +364,62 @@
                     rewardList.appendChild(rewardItem);
                 });
             }
-        } catch (err) {
-            console.error("Error loading rewards:", err);
-            rewardList.innerHTML = "<p>Failed to load rewards. Please try again later.</p>";
         }
-    }
 
-    async function purchaseReward(userName, rewardName, diamondCost) {
-        try {
-            const rewardsResponse = await fetch(`https://beemazing.onrender.com/api/rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
-            const rewardsData = await rewardsResponse.json();
-            if (!rewardsResponse.ok) throw new Error(rewardsData.error || "Failed to fetch rewards");
-            const rewards = rewardsData.rewards || {};
+        function purchaseReward(userName, rewardName, diamondCost) {
+            const rewards = JSON.parse(localStorage.getItem("familyApp_rewards")) || {};
             const userDiamonds = rewards[userName] || 0;
 
-            if (userDiamonds < diamondCost) {
-                alert("Not enough honey to purchase this reward!");
-                return;
+            if (userDiamonds >= diamondCost) {
+                rewards[userName] = userDiamonds - diamondCost;
+                localStorage.setItem("familyApp_rewards", JSON.stringify(rewards));
+
+                const userRewards = JSON.parse(localStorage.getItem("familyApp_user_rewards")) || {};
+                if (!userRewards[userName]) userRewards[userName] = [];
+                userRewards[userName].push({ name: rewardName, date: new Date().toLocaleString() });
+                localStorage.setItem("familyApp_user_rewards", JSON.stringify(userRewards));
+
+                showRewardEffect(rewardName, userName);
             }
-
-            rewards[userName] = userDiamonds - diamondCost;
-            const saveRewardsResponse = await fetch("https://beemazing.onrender.com/api/rewards", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ adminEmail, user: userName, amount: -diamondCost })
-            });
-            if (!saveRewardsResponse.ok) throw new Error((await saveRewardsResponse.json()).error || "Failed to update rewards");
-
-            const userRewardsResponse = await fetch(`https://beemazing.onrender.com/api/user-rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
-            const userRewardsData = await userRewardsResponse.json();
-            if (!userRewardsResponse.ok) throw new Error(userRewardsData.error || "Failed to fetch user rewards");
-            const userRewards = userRewardsData.userRewards || {};
-            if (!userRewards[userName]) userRewards[userName] = [];
-            userRewards[userName].push({ name: rewardName, date: new Date().toLocaleString() });
-
-            const saveUserRewardsResponse = await fetch("https://beemazing.onrender.com/api/user-rewards", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ adminEmail, userRewards })
-            });
-            if (!saveUserRewardsResponse.ok) throw new Error((await saveUserRewardsResponse.json()).error || "Failed to save user rewards");
-
-            showRewardEffect(rewardName, userName);
-        } catch (err) {
-            console.error("Error purchasing reward:", err);
-            alert("Failed to purchase reward. Please try again.");
-        }
-    }
-
-    function showRewardEffect(rewardName, userName) {
-        const overlay = document.getElementById("rewardOverlay");
-        const rewardMessage = document.getElementById("claimedRewardName");
-        rewardMessage.textContent = rewardName;
-
-        overlay.classList.add("show");
-
-        const flash = document.createElement("div");
-        flash.className = "flash";
-        overlay.appendChild(flash);
-        setTimeout(() => flash.remove(), 600);
-
-        for (let i = 0; i < 30; i++) {
-            const confetti = document.createElement("div");
-            confetti.className = "confetti";
-            const angle = Math.random() * 360;
-            const distance = Math.random() * 20 + 10;
-            confetti.style.setProperty('--x', Math.cos(angle * Math.PI / 180) * distance);
-            confetti.style.setProperty('--y', Math.sin(angle * Math.PI / 180) * distance);
-            confetti.style.left = '50%';
-            confetti.style.top = '50%';
-            confetti.style.background = i % 2 === 0 ? 'var(--primary-color)' : '#FFB300';
-            overlay.appendChild(confetti);
-            setTimeout(() => confetti.remove(), 1500);
         }
 
-        overlay.addEventListener("click", function closeOverlay(e) {
-            if (e.target === overlay) {
-                overlay.classList.remove("show");
-                loadRewards(userName);
-                overlay.removeEventListener("click", closeOverlay);
+        function showRewardEffect(rewardName, userName) {
+            const overlay = document.getElementById("rewardOverlay");
+            const rewardMessage = document.getElementById("claimedRewardName");
+            rewardMessage.textContent = rewardName;
+
+            overlay.classList.add("show");
+
+            // Add flashing effect
+            const flash = document.createElement("div");
+            flash.className = "flash";
+            overlay.appendChild(flash);
+            setTimeout(() => flash.remove(), 600);
+
+            // Add confetti burst
+            for (let i = 0; i < 30; i++) {
+                const confetti = document.createElement("div");
+                confetti.className = "confetti";
+                const angle = Math.random() * 360;
+                const distance = Math.random() * 20 + 10;
+                confetti.style.setProperty('--x', Math.cos(angle * Math.PI / 180) * distance);
+                confetti.style.setProperty('--y', Math.sin(angle * Math.PI / 180) * distance);
+                confetti.style.left = '50%';
+                confetti.style.top = '50%';
+                confetti.style.background = i % 2 === 0 ? 'var(--primary-color)' : '#FFB300';
+                overlay.appendChild(confetti);
+                setTimeout(() => confetti.remove(), 1500);
             }
-        });
-    }
+
+            // Close overlay when clicking outside the message
+            overlay.addEventListener("click", function closeOverlay(e) {
+                if (e.target === overlay) {
+                    overlay.classList.remove("show");
+                    loadRewards(userName);
+                    overlay.removeEventListener("click", closeOverlay);
+                }
+            });
+        }
     </script>
 </body>
+</html>
