--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -411,24 +411,25 @@ body {
   
 
 
-<div class="footer" id="footer">
-    <a href="/BeeMazing-Y1/mobile/1-Home/home.html" class="footer-icon active" aria-label="Home">
-        <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-        <span>Home</span>
-    </a>
-    <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" class="footer-icon" aria-label="Tasks" id="tasksButton">
-        <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
-        <span>Tasks</span>
-    </a>
-    <a href="#" class="footer-icon" aria-label="Market" id="marketButton">
-        <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
-        <span>Market</span>
-    </a>
-    <a href="/BeeMazing-Y1/mobile/5-Stats/stats.html" class="footer-icon" aria-label="Stats" id="statsButton">
-        <img src="/BeeMazing-Y1/mobile/1-Home/StatsBtn.png" alt="Stats" />
-        <span>Stats</span>
-    </a>
-</div>
+    <a href="#" class="add-user-btn" id="addUserBtn" aria-label="Add User">+</a>
+    <div class="footer" id="footer">
+        <a href="/BeeMazing-Y1/mobile/1-Home/home.html" class="footer-icon active" aria-label="Home">
+            <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
+            <span>Home</span>
+        </a>
+        <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" class="footer-icon" aria-label="Tasks">
+            <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
+            <span>Tasks</span>
+        </a>
+        <a href="/BeeMazing-Y1/mobile/4-Market/market.html" class="footer-icon" aria-label="Market">
+            <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
+            <span>Market</span>
+        </a>
+        <a href="/BeeMazing-Y1/mobile/5-Stats/stats.html" class="footer-icon" aria-label="Stats">
+            <img src="/BeeMazing-Y1/mobile/1-Home/StatsBtn.png" alt="Stats" />
+            <span>Stats</span>
+        </a>
+    </div>
 
     <script>
         // Dynamically highlight the active footer icon
