--- a/mobile/2-UserProfiles/usermarket.html
+++ b/mobile/2-UserProfiles/usermarket.html
@@ -313,56 +313,42 @@
 
 
 
-        async function loadRewards(userName) {
-    const rewardList = document.getElementById("rewardList");
+        async function loadRewards() {
+    const urlParams = new URLSearchParams(window.location.search);
+    const adminEmail = urlParams.get('adminEmail');
+    const user = urlParams.get('user');
+    const marketList = document.getElementById('marketList');
 
     try {
-        // Fetch market rewards from MongoDB
-        const marketResponse = await fetch(`https://beemazing.onrender.com/api/market-rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
-        const marketData = await marketResponse.json();
-        console.log("Fetching market rewards for adminEmail:", adminEmail); // Debug log
-        console.log("Raw market response:", marketData); // Debug log
+        const response = await fetch(`https://beemazing.onrender.com/api/market-rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
+        const data = await response.json();
+        const rewards = data.rewards || [];
 
-        if (!marketResponse.ok) {
-            console.error("Server returned an error:", marketData.error);
-            throw new Error(marketData.error || "Failed to fetch market rewards");
-        }
-
-        const rewards = marketData.rewards || [];
-        console.log("Parsed rewards:", rewards); // Debug log
-
-        const userDiamonds = await getUserDiamonds(userName);
-        console.log("User diamonds for", userName, ":", userDiamonds); // Debug log
-
-        rewardList.innerHTML = "";
         if (rewards.length === 0) {
-            rewardList.innerHTML = "<p>No rewards available in the hive.</p>";
-        } else {
-            rewards.forEach((reward) => {
-                const rewardItem = document.createElement("li");
-                rewardItem.className = "reward-item";
-                const canAfford = userDiamonds >= reward.diamonds;
-                rewardItem.innerHTML = `
-                    <div class="reward-details">
-                        <strong>${reward.name}</strong><br>
-                        Honey: ${reward.diamonds} 🍯
-                    </div>
-                    <button class="get-it-btn ${canAfford ? 'enabled' : 'disabled'}" 
-                            ${canAfford ? '' : 'disabled'} 
-                            onclick="purchaseReward('${userName}', '${reward.name}', ${reward.diamonds})">
-                        Get It
-                    </button>
-                `;
-                rewardList.appendChild(rewardItem);
-            });
+            marketList.innerHTML = "<p>No rewards available in the hive</p>";
+            return;
         }
+
+        marketList.innerHTML = "";
+        rewards.forEach(reward => {
+            const rewardItem = document.createElement("div");
+            rewardItem.innerHTML = `
+                ${reward.name}: ${reward.diamonds} 🍯
+                <button onclick="claimReward('${reward.name}', ${reward.diamonds})">Get It</button>
+            `;
+            marketList.appendChild(rewardItem);
+        });
+
+        // Fetch user diamonds
+        const userResponse = await fetch(`https://beemazing.onrender.com/api/rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
+        const userData = await userResponse.json();
+        const userDiamonds = userData.rewards[user] || 0;
+        console.log(`User diamonds for ${user}:`, userDiamonds);
     } catch (err) {
         console.error("Error loading rewards:", err);
-        rewardList.innerHTML = "<p>Failed to load rewards. Please try again later.</p>";
+        marketList.innerHTML = "<p>Error loading rewards</p>";
     }
 }
-
-
 
 
 
