--- a/mobile/2-UserProfiles/usermarket.html
+++ b/mobile/2-UserProfiles/usermarket.html
@@ -239,7 +239,7 @@
     </div>
 
     <div class="footer">
-        <a href="/BeeMazing-Y1/mobile/1-Home/home.html" class="footer-icon" aria-label="Home">
+        <a id="homeFooterLink" class="footer-icon" aria-label="Home">
             <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
             <span>Home</span>
         </a>
@@ -283,6 +283,17 @@ if (adminEmail) {
             document.getElementById('rewardsButton').href = `/BeeMazing-Y1/mobile/2-UserProfiles/userrewards.html?user=${encodeURIComponent(userName)}`;
             loadRewards();
         }
+
+
+// Dynamically set footer links with correct user/admin
+if (userName && adminEmail) {
+    const homeLink = document.getElementById("homeFooterLink");
+    if (homeLink) {
+        homeLink.href = `/BeeMazing-Y1/mobile/1-Home/home.html?admin=${encodeURIComponent(adminEmail)}`;
+    }
+}
+
+
 
         // Highlight active footer icon
         document.querySelectorAll('.footer a').forEach(link => {
