--- a/mobile/2-UserProfiles/usermarket.html
+++ b/mobile/2-UserProfiles/usermarket.html
@@ -298,14 +298,16 @@ if (userName && adminEmail) {
 
         // Highlight active footer icon
         document.querySelectorAll('.footer a').forEach(link => {
-            const currentPath = window.location.pathname.replace(/\/$/, '');
-            const linkPath = new URL(link.href).pathname.replace(/\/$/, '');
-            if (currentPath === linkPath) {
-                link.classList.add('active');
-            } else {
-                link.classList.remove('active');
-            }
-        });
+    const currentPath = window.location.pathname.replace(/\/$/, '');
+    const linkPath = new URL(link.href, window.location.origin).pathname.replace(/\/$/, '');
+    if (currentPath === linkPath) {
+        link.classList.add('active');
+    } else {
+        link.classList.remove('active');
+    }
+});
+
+
 
         async function loadRewards() {
             const rewardList = document.getElementById('rewardList');
